<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/geomapBakajuan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:fitsSystemWindows="true">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#263B1A"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratalternates_medium_font"
            android:text="@string/Baka"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratalternates_bold_font"
            android:text="@string/Juan"
            android:textColor="#799A0B"
            android:textSize="30sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:paddingTop="100dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Bottom Navigation -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/footer_nav_bg"
        android:clipChildren="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Home -->
        <LinearLayout
            android:id="@+id/navHomeContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25">

            <ImageButton
                android:id="@+id/navHome"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@null"
                android:contentDescription="@string/HomeImage"
                android:scaleType="centerInside"
                android:src="@drawable/home_white"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratalternates_medium_font"
                android:text="@string/home"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Geomap -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/geomap"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/navCatalogContainer"
            app:layout_constraintStart_toEndOf="@id/navHomeContainer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25">

            <ImageButton
                android:id="@+id/navGeomap"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="-30dp"
                android:background="@drawable/map_green"
                android:contentDescription="@string/GeomapImage"
                android:elevation="12dp"
                android:scaleType="centerInside"
                android:src="@drawable/map_green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/geomapLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/montserratalternates_medium_font"
                android:text="@string/geomap"
                android:textColor="#799A0B"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Catalog -->
        <LinearLayout
            android:id="@+id/navCatalogContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/geomap"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25">

            <ImageButton
                android:id="@+id/navCatalog"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@null"
                android:contentDescription="@string/CatalogImage"
                android:scaleType="centerInside"
                android:src="@drawable/catalog"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratalternates_medium_font"
                android:text="@string/catalog"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Catalog Overlay -->
    <FrameLayout
        android:id="@+id/catalogOverlay"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/catalog_box"
        android:elevation="4dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Capture/Button -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mangroveCaptureUpload"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="-18dp"
        android:backgroundTint="#799A0B"
        android:clickable="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:focusable="true"
        android:translationZ="5dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/rightButtonAnchor"
        app:layout_constraintWidth_percent="0.15"
        app:strokeWidth="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="1dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/CaptureUploadMangrove"
            android:scaleType="centerInside"
            android:src="@drawable/capture_upload" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightButtonAnchor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.708" />

</androidx.constraintlayout.widget.ConstraintLayout>