<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/geomapInformation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:clipChildren="false"
    android:clipToPadding="false">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#263B1A"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/backToGeomap"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back"
            android:contentDescription="Back to mangrove catalog"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Baka"
            android:fontFamily="@font/montserratalternates_medium_font"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_marginLeft="130dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Juan"
            android:fontFamily="@font/montserratalternates_bold_font"
            android:textColor="#799A0B"
            android:textSize="30sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toTopOf="@id/bottomNav">

        <!-- Map -->
        <ImageView
            android:id="@+id/mapImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/geomap_mapping"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="1" />

        <ImageView
            android:id="@+id/specieID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-200dp"
            android:contentDescription="@string/SpeciesID"
            android:scaleType="centerInside"
            android:src="@drawable/species_id"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Catalog Information -->
        <LinearLayout
            android:id="@+id/catalogOverlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical"
            android:background="@drawable/catalog_box"
            android:padding="20dp"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/specieviewID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PG1001"
                    android:textColor="#263B1A"
                    android:textSize="18sp"
                    android:fontFamily="@font/montserratalternates_bold_font" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/vertical_line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="Pagatpat"
                    android:textColor="#263B1A"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserratalternates_bold_font" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageBakajuan"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:src="@drawable/unround"
                    android:scaleType="centerCrop"
                    android:contentDescription="Mangrove image"
                    app:shapeAppearanceOverlay="@style/CircularImage" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:text="Upper surface is smooth, dark green; under surface is smooth light green; blades are obovate to round; 8 cm long, 7 cm wide."
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:justificationMode="inter_word"
                    android:fontFamily="@font/montserratalternates_medium_font" />
            </LinearLayout>

            <!-- View in Catalog Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/viewCatalog"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                android:gravity="center"
                android:background="@drawable/dashboard"
                android:fontFamily="@font/montserratalternates_bold_font"
                android:text="VIEW IN CATALOG"
                android:textColor="#FFF3E5"
                android:textSize="13sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Bottom Navigation -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/footer_nav_bg"
        android:clipChildren="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Home -->
        <LinearLayout
            android:id="@+id/navHomeContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.25">

            <ImageButton
                android:id="@+id/navHome"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@null"
                android:contentDescription="@string/HomeImage"
                android:scaleType="centerInside"
                android:src="@drawable/home_white"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:fontFamily="@font/montserratalternates_medium_font"
                android:textColor="#FFFFFF"
                android:textSize="14sp"/>
        </LinearLayout>

        <!-- Geomap -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/geomap"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/navHomeContainer"
            app:layout_constraintEnd_toStartOf="@id/navCatalogContainer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.25">

            <ImageButton
                android:id="@+id/navGeomap"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/map_green"
                android:src="@drawable/map_green"
                android:scaleType="centerInside"
                android:contentDescription="@string/GeomapImage"
                android:elevation="12dp"
                android:layout_marginTop="-30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/geomapLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/montserratalternates_medium_font"
                android:text="@string/geomap"
                android:textColor="#799A0B"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Catalog -->
        <LinearLayout
            android:id="@+id/navCatalogContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/geomap"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.25">

            <ImageButton
                android:id="@+id/navCatalog"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@null"
                android:contentDescription="@string/CatalogImage"
                android:scaleType="centerInside"
                android:src="@drawable/catalog"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catalog"
                android:fontFamily="@font/montserratalternates_medium_font"
                android:textColor="#FFFFFF"
                android:textSize="14sp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Capture/Button -->
    <ImageButton
        android:id="@+id/mangroveCaptureUpload"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:layout_marginStart="-35dp"
        android:layout_marginBottom="-18dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/CaptureUploadMangrove"
        android:elevation="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/capture_upload"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintStart_toStartOf="@id/rightButtonAnchor"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightButtonAnchor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.855" />

</androidx.constraintlayout.widget.ConstraintLayout>
